# closs-int

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sync.py
headers/: display.h
rooms/: in_game.json  level_insertor.py  lobby.json  manual.json  settings.json
rooms/CLL/: -1.cll  -2.cll  -6.cll  1.cll  10.cll  11.cll  12.cll  13.cll  14.cll  15.cll  16.cll  17.cll  18.cll  19.cll  2.cll  20.cll  21.cll  22.cll  23.cll  24.cll  25.cll  26.cll  27.cll  28.cll  29.cll  3.cll  30.cll  31.cll  32.cll  33.cll  34.cll  35.cll  36.cll  37.cll  38.cll  39.cll  4.cll  40.cll  41.cll  42.cll  (+22 more)
rooms/CLL/1/: 1.cll  10.cll  11.cll  12.cll  13.cll  14.cll  15.cll  16.cll  17.cll  18.cll  19.cll  2.cll  20.cll  3.cll  4.cll  5.cll  6.cll  7.cll  8.cll  9.cll
rooms/CLL/2/: 21.cll  22.cll  23.cll  24.cll  25.cll  26.cll  27.cll  28.cll  29.cll  30.cll  31.cll  32.cll  33.cll  34.cll  35.cll  36.cll  37.cll  38.cll  39.cll  40.cll
rooms/CLL/3/: 41.cll  42.cll  43.cll  44.cll  45.cll  46.cll  47.cll  48.cll  49.cll  50.cll  51.cll  52.cll  53.cll  54.cll  55.cll  56.cll  57.cll  58.cll  59.cll  60.cll
rooms/CLL/4/: 61.cll  62.cll  63.cll  64.cll  65.cll  67.cll  68.cll  69.cll  70.cll  71.cll  72.cll  73.cll  74.cll  75.cll  76.cll  77.cll  78.cll  79.cll  80.cll
rooms/CLL/5/: 100.cll  81.cll  82.cll  83.cll  84.cll  85.cll  86.cll  87.cll  88.cll  89.cll  90.cll  91.cll  92.cll  93.cll  94.cll  95.cll  96.cll  97.cll  98.cll  99.cll
rooms/CLL/5++/: 101.cll  102.cll
rooms/CLL/b1/: -10.cll  -6.cll  -7.cll  -8.cll  -9.cll
rooms/CLL/b2/: -11.cll  -12.cll  -13.cll  -14.cll
rooms/CLL/hidden/: -1.cll  -2.cll  -3.cll  -4.cll  -5.cll
rooms/CLL2/: 1.cll  CLL2.cll  my.json
rooms/Closs/: -1.json  -10.json  -11.json  -12.json  -13.json  -14.json  -2.json  -3.json  -4.json  -5.json  -6.json  -7.json  -8.json  -9.json  1.json  10.json  100.json  101.json  102.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  (+77 more)
sound/: schemes.json
src/: closs.cpp  closs.h  const.cpp  const.h  display.cpp  display.h  img.cpp  img.h  loader.cpp  loader.h  mixer.cpp  mixer.h  page.cpp  page.h
tools/: CLL_to_Closs.py  convertor.py  convertor_template.json  template.json
ttf/: debugger_code.txt
user/: default.json
